--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/order-service?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:13306/order-service?createDatabaseIfNotExist=true
     username: root
     password: microservices
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
       show_sql: true
     properties:
       hibernate:
